[package]
name = "black-diamond-rust-ecosystem"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "black_diamond_server"
path = "src/main.rs"

[[bin]]
name = "black_diamond_cli"
path = "src/cli.rs"

[dependencies]
# Solana Core
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
spl-token = "4.0"
anchor-client = "0.29"
anchor-lang = "0.29"

# Async Runtime
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# HTTP Client/Server
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.10"

# Performance
rayon = "1.8"
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"

# Randomization
fastrand = "2.0"
rand = "0.8"

# Crypto
bs58 = "0.5"
sha2 = "0.10"
base64 = "0.21"
curve25519-dalek = "4.0"
ed25519-dalek = "2.0"

# Configuration
config = "0.14"
dotenv = "0.15"